--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -27,7 +27,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:layout_below="@+id/edt_comment"
-        android:text="Button"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="@dimen/dimen_20"
+        android:text="Submit"
       />
     </RelativeLayout>
 
